<resources>
    <string name="app_name">My_E_Wallet_Application</string>
    <string name="back">Back</string>
    <string name="rewards">Rewards</string>
    <string name="menu">Menu</string>
    <string name="savings">Savings</string>
    <string name="spending_rewards">Spending Rewards</string>
    <string name="milestone_rewards">Milestone Rewards</string>
    <!--  Savings Rewards  -->
    <string name="first_deposit">First Deposit</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="r1000_saved">R1000 Saved</string>
    <string name="one_month_streak">1 Month Savings Streak</string>
    <string name="ten_transactions">10 Successful Transactions</string>
    <string name="weekly_goal">Weekly Goal Completed</string>
    <string name="seven_day_streak">7-Day Streak</string>
    <!--  Spending Rewards  -->
    <string name="first_expense">First Expense Logged</string>
    <!--  Milestone Rewards  -->
    <string name="saved_r1000_total">Saved R1000 Total</string>
    <string name="settings">Settings</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="profile">Profile</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="your_cards">Your cards</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="card_alias_placeholder">Main Card</string>
    <string name="card_number_placeholder">**** **** **** 1234</string>
    <string name="card_options_description">Card Options Menu</string>
    <string name="card_type_icon_description">Card Type Icon</string>
    <string name="add_new_card">Add New Card</string>
    <string name="your_profile">Your Profile</string>
    <string name="email_placeholder">emailplaceholder@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="choose_language">Choose Language</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
</resources>